fixed width bug on safari

--- a/src/app/my-work/my-work.component.scss
+++ b/src/app/my-work/my-work.component.scss
@@ -108,7 +108,7 @@
 .link-btn {
     background-color: white;
     padding: 13px;
-    width: 72px;
+    width: 75px;
     border: 2px solid #e6405d;
 }
 
